# coding_quiz

./: .gitignore  README.md
BracketCalculation/: CMakeLists.txt  bracket_calculation.cc
BracketCalculation/Brackets_testcase/: 1.input.txt  1.output.txt  10.input.txt  10.output.txt  2.input.txt  2.output.txt  3.input.txt  3.output.txt  4.input.txt  4.output.txt  5.input.txt  5.output.txt  6.input.txt  6.output.txt  7.input.txt  7.output.txt  8.input.txt  8.output.txt  9.input.txt  9.output.txt
VoteProgram/: CMakeLists.txt  vote_program.cc
VoteProgram/Vote_testcase/: 1.input.txt  2.input.txt  3.input.txt  4.input.txt  6.input.txt
